public/stylesheets/fymp.css
#secondary_breadcrumb {
  float: left;
  width: 460px;
  clear: both;
  font-size: 0.7em;
  padding-bottom: 10px;
  border: 0;
  margin: 0 0 10px 0;
}

.column_solid_top {
  border-top: 1px solid #cfcfcf;
  float: left;
  width: 100%;
}

.text code {
  font-size: 1.3em;
}

.flash {
  color: red;
}

.warn {
  color: red;
}

.hidden_member {
  color: grey;
  font-style: italic;
}

.form_field {
  margin: 1em 0;
}

.fieldWithErrors input,
.fieldWithErrors textarea {
  margin: 0;
  border: solid 1px #cc0000;
  background-color: #ffcccc;
}

.formError {
  color: red;
  margin-left: 10em;
}

.errorExplanation {
  width: 460px;
}

label {
  font-size:0.8em;
  width: 12em;
  float: left;
  text-align: right;
  margin-right: 0.5em;
  display: block;
}

label.checkbox_label {
  float: none;
  display: inline;
}

.row_item {
  padding-top: 0.7em;
  clear: both;
  height: 25px;
}
.row_label {
  float: left;
  width: 125px;
}
.row_value {
  float: left;
}

.padded_subheading {
  padding-top: 1em;
  padding-bottom: 1em;
  border-bottom: none;
}

#mp_search {
  padding-top: 0.1em;
  padding-bottom: 0.1em;
}

